--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Safehomecoming</string>
+    <string name="app_name">Safe Home</string>
+    <string name="google_maps_key">map_key</string>
 </resources>
